[tool.poetry]
name = "repl_python3_beta_FabulousAlarmingBrowser"
version = "0.1.0"
description = ""
authors = ["ConnorZacharias <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
player = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
